# nle-bench-artifact

./: .gitignore  CITATION.cff  LICENSE-APACHE-2.0  README.md
code/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
code/scripts/: analyze_run.py  analyze_tool_hallucinations.py  audit_attribute_changed_direction.py  audit_instruction_constraint_coverage.py  compute_iaa.py  generate_review_artifacts.py  human_study_samples.json  model_pins.json  paper_v4_analysis.py  regenerate_tables.py  rescore_attribute_changed_direction.py  run_benchmark.sh  sample_human_study.py  validate_scenarios.py  validate_scenarios_v2.py
code/src/nlebench/: __init__.py  __main__.py  config.py  models.py  protocols.py  tracking.py
code/src/nlebench/analysis/: __init__.py  aggregator.py  leaderboard.py  report_generator.py  visualization.py
code/src/nlebench/dataset/: __init__.py  cas_linter.py  contamination.py
code/src/nlebench/metrics/: __init__.py  calibration.py  correctness.py  efficiency.py  error_taxonomy.py  nos.py  reliability.py
code/src/nlebench/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  vllm_provider.py
code/src/nlebench/runner/: __init__.py  constraints.py  executor.py  multi_turn.py  (+3 more)
code/tests/: conftest.py  test_backwards_compat.py  test_calibration.py  test_canonical_tools.py  test_constraints.py  test_error_viz.py  test_metrics_v2.py  test_models.py  test_multi_turn.py  test_nos.py  test_per_turn_validation.py  test_providers.py  test_quick_mode.py  test_scenario_loader.py  test_tracks.py
(+1639 files in other folders)
